# team

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  favicon-simple-test.html  favicon-test.html  index.html  test_different_prefs.rs  test_recommendations.rs
.claude/: settings.local.json
admin/: README.md  import-data.html  index.html
admin/google/: index.html
admin/google/form/: README.md  config.json  form.js  index.html
admin/google/meetup/: README.md  index.html
admin/log-output/: README.md  index.html
admin/server/: README.md  code.md  index.html  other.md
admin/sql/: README_foreign_keys.md  add_foreign_keys.sql  cleanup_orphaned_records.sql  table_relationships.json
admin/sql/panel/: README.md  db-admin.js  index.html  rust_db_endpoints.rs
config/: cli.csv  navigation.json  settings.example.js
css/: account.css  claude.css  common.css  navigation.css  people-teams.css  projects.css  shared-styles.css  space.css  standalone-nav.css
img/: presenting.psd
js/: common.js  leaflet.js  list.js  projects.js  standalone-nav.js  survey.js
preferences/: README.md  preferences.html
preferences/projects/: DFC-ActiveProjects.xlsx  opportunity.xlsx
project/: edit.html
projects/: edit.html  index.html
projects/map/: README.md  cities.csv  index.html  show.json
src/: claude_insights.rs  gemini_insights.rs  google.rs  import.rs  main-backup.rs  main.rs  recommendations.rs  test_recommendations.rs
team/: README.md  index.html
team/map/: README.md
